--- a/青蛙跳/index2.html
+++ b/青蛙跳/index2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>青蛙跳小游戏</title>
+<title>青蛙跳优化</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <link href="" rel="stylesheet">
@@ -43,38 +43,51 @@
     <script type="text/javascript">
     //当点击frog-l时，如果它左边是空的，和空的交换位置。 如果他左边不是空的，但左边的左边是空的，和空的位置交换
     
-    $s = $('.space');
+    var $space = $('.space');
 
-    $('.frog-l').on('click', function(){
-    	var $this = $(this);
-    	if($this.prev().length == 0){
-    		return;
+
+    $('.mod-frog li').on('click', function(){
+    	var $self = $(this);
+    	if( canMove($self) ){
+    		swap( $self, $space);
     	}
-    	var $prev = $this.prev();
-    	if($prev.hasClass('space')){
-    		swap($this, $prev);
-    	}else if($prev.prev().length > 0 && $prev.prev().hasClass('space')){
-    		swap($this, $prev.prev());
+    	if( isSuccess() ){
+    		alert('成功');
     	}
-    	if(isSuccess()){
-    		alert('恭喜，完成任务');
-    	}
-    });
-    $('.frog-r').on('click', function(){
-    	var $this = $(this);
-    	if($this.next().length == 0){
-    		return;
-    	}
-    	var $next = $this.next();
-    	if($next.hasClass('space')){
-    		swap($this, $next);
-    	}else if($next.next().length > 0 && $next.next().hasClass('space')){
-    		swap($this, $next.next());
-    	}
-    	if(isSuccess()){
-    		alert('恭喜，完成任务');
+
+    	if( isFaild() ){
+    		alert('失败');
     	}
     });
+
+
+
+    /**
+     * 判断一个节点能否移动
+     * @param  {[type]} $el 
+     * @return {boolean} 如果能移动，true,
+     */
+    function canMove($el){
+    	var fn;
+    	if($el.hasClass('frog-r')){
+    		fn = 'next';
+    	}else if($el.hasClass('frog-l')){
+    		fn = 'prev';
+    	}else{
+    		return false;
+    	}
+
+		if( ($el[fn]() && isSpace($el[fn]()) ) || ($el[fn]()[fn]() && isSpace( $el[fn]()[fn]() ))  ){
+			return true;
+		}else{
+			return false;
+		}
+
+    }
+
+    function isSpace($el){
+    	return $el.hasClass('space');
+    }
 
    	function swap($a, $b){
    		var $bb = $('<span>');
@@ -86,6 +99,18 @@
 
    	function isSuccess(){
    		return $('.space').prevAll('.frog-l').length === 3  && $('.space').nextAll('.frog-r').length === 3 
+   	}
+
+   	function isFaild(){
+   		var isMovable = false;
+   		$('.mod-frog li').each(function(){
+   			var $self = $(this);
+   			if(canMove($self)){
+   				isMovable = true;
+   			}
+   		});
+
+   		return !isMovable;
    	}
 
     </script>
