添加首页说明

--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@ sup {
 
 <p><a href="./%E5%B8%83%E5%B1%80/%E5%8F%8C%E9%A3%9E%E7%BF%BC%E5%B8%83%E5%B1%80.html">代码1-双飞翼布局</a></p>
 
-<p><a href="./%E5%B8%83%E5%B1%80/%E5%9C%A3%E6%9D%AF.html">代码2-圣杯布局</a></p>
+<p><a href="./%E5%B8%83%E5%B1%80/%E5%9C%A3%E6%9D%AF%E5%B8%83%E5%B1%80.html">代码2-圣杯布局</a></p>
 </body>
 </html>
