--- a/事件中心/index.html
+++ b/事件中心/index.html
@@ -57,12 +57,12 @@
 
 
 
-		$('.input1').on('change', function(){
+		$('.input1').on('change', function(data){
 			$('#panel').text(data);
 			//EventCenter.fire('text-change', [$(this).val()]);
 		})
 
-		$('.input2').on('change', function(){
+		$('.input2').on('change', function(data){
 			$('#panel').text(data);
 			//EventCenter.fire('text-change', [$(this).val()]);
 		})
