--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ sup {
 
 </head>
 <body>
-<h1>课程练习代码</h1>
+<h1>课程练习代码1</h1>
 
 <p>代码可在<a href="https://github.com/jirengu/sample">github</a>下载，也可直接在在线demo页面查看源代码查看</p>
 
