--- a/seajs和工程化/index.html
+++ b/seajs和工程化/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keyword" content="饥人谷 前端 java">
     <meta name="description" content="饥人谷，最专业的前端java培训">
-    <title>饥人谷</title>
+    <title>饥人谷3333</title>
     <link rel="stylesheet" type="text/css" href="./css/base.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 
@@ -17,16 +17,16 @@
 
     <div id="content">
         <div class="ct">
-        <div class="carousel main">
-            <ul class="img-ct">
-                <li><a href="#"><img src="imgs/1.jpg" ></a></li>
-                <li><a href="#"><img src="imgs/2.jpg"></a></li>
-                <li><a href="#"><img src="imgs/3.jpg"></a></li>
-                <li><a href="#"><img src="imgs/4.jpg"></a></li>
-            </ul>
-            <a class="pre arrow" href="#"><</a>
-            <a class="next arrow" href="#">></a>
-        </div>
+            <div class="carousel main">
+                <ul class="img-ct">
+                    <li><a href="#"><img src="imgs/1.jpg" ></a></li>
+                    <li><a href="#"><img src="imgs/2.jpg"></a></li>
+                    <li><a href="#"><img src="imgs/3.jpg"></a></li>
+                    <li><a href="#"><img src="imgs/4.jpg"></a></li>
+                </ul>
+                <a class="pre arrow" href="#"><</a>
+                <a class="next arrow" href="#">></a>
+            </div>
         
             <div class="intro">
                 <p style="display: block">兴趣很重要</p>
@@ -48,11 +48,23 @@
                     <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a10.jpg" /> </a></li>
                     <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a11.jpg" /> </a></li>
                     <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a12.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a1.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a2.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a3.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a4.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a5.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a6.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a7.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a8.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a9.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a10.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a11.jpg" /> </a></li>
+                    <li><a href="#"><img src="./imgs/blank.jpg" data-src="./imgs/a12.jpg" /> </a></li>
                 </ul>
 
             </div>
         </div>
-    <script type="text/javascript" src="js/all.min.js"></script>
+
     <script src="js/lib/sea/sea.js"></script>
     <script type="text/javascript">
 
